# dawn

./: .gitignore  CMakeLists.txt  README.md  audio_utils.c  audio_utils.h  commands_config_nuevo.json  dawn.c  dawn.h  flac_playback.c  flac_playback.h  logging.h  mic_passthrough.c  mic_passthrough.h  mosquitto_comms.c  mosquitto_comms.h  openai.c  openai.h  piper.cpp  piper.hpp  secrets.h  text_to_command_nuevo.c  text_to_command_nuevo.h  text_to_speech.cpp  text_to_speech.h  version.h  word_to_number.c  word_to_number.h
etc/: nvfancontrol.conf  nvpmodel.conf
etc/pulse/: default.pa
etc/pulse/default.pa.d/: oasis.pa
